--- a/CoffeeTracker/packages.config
+++ b/CoffeeTracker/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net46" />
+  <package id="EntityFramework.MappingAPI" version="6.0.0.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
@@ -9,4 +12,7 @@
   <package id="Microsoft.Net.Compilers" version="1.2.1" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Swashbuckle" version="5.3.2" targetFramework="net46" />
+  <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
 </packages>
