--- a/CoffeeTracker/packages.config
+++ b/CoffeeTracker/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
+  <package id="DataAnnotationsExtensions" version="5.0.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net46" />
   <package id="EntityFramework.MappingAPI" version="6.0.0.7" targetFramework="net46" />
+  <package id="Faker.Net" version="1.0.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
