--- a/CoffeeTracker/package.json
+++ b/CoffeeTracker/package.json
@@ -73,7 +73,8 @@
       "jquery": "npm:jquery@^2.2.2",
       "moment": "npm:moment@^2.12.0",
       "openexchangerates/accounting.js": "github:openexchangerates/accounting.js@^0.4.1",
-      "text": "github:systemjs/plugin-text@^0.0.3"
+      "text": "github:systemjs/plugin-text@^0.0.3",
+      "typeahead.js-jspm": "npm:typeahead.js-jspm@^1.2.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.6.4",
