Typeahead + validation (with bugs)

--- a/CoffeeTracker/CoffeeTracker.csproj
+++ b/CoffeeTracker/CoffeeTracker.csproj
@@ -162,11 +162,12 @@
     <Content Include="protractor.conf.js" />
     <Content Include="src\app.html" />
     <Content Include="src\app.js" />
+    <Content Include="src\coffeeentry.js" />
     <Content Include="src\journal.html" />
     <Content Include="src\journal.js" />
     <Content Include="src\main.js" />
     <Content Include="src\resources\date-format.js" />
-    <Content Include="src\resources\price-format.js" />
+    <Content Include="src\resources\number-format.js" />
     <Content Include="styles\splash.css" />
     <Content Include="styles\styles.css" />
     <Content Include="wallaby.js" />
