--- a/CoffeeTracker/package.json
+++ b/CoffeeTracker/package.json
@@ -67,6 +67,7 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.0.1",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.0.1",
       "aurelia-ui-virtualization": "npm:aurelia-ui-virtualization@^0.3.2",
+      "aurelia-validation": "npm:aurelia-validation@^0.6.6",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "fetch": "github:github/fetch@^0.10.1",
