--- a/CoffeeTracker/package.json
+++ b/CoffeeTracker/package.json
@@ -60,6 +60,7 @@
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1",
+      "aurelia-i18n": "npm:aurelia-i18n@^0.5.1",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.0.1",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1",
       "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1",
@@ -72,6 +73,7 @@
       "css": "github:systemjs/plugin-css@^0.1.20",
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.5.0",
+      "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.5.3",
       "jquery": "npm:jquery@^2.2.2",
       "moment": "npm:moment@^2.12.0",
       "openexchangerates/accounting.js": "github:openexchangerates/accounting.js@^0.4.1",
