--- a/CoffeeTracker/Web.config
+++ b/CoffeeTracker/Web.config
@@ -6,7 +6,12 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="jsnlog" type="JSNLog.ConfigurationSectionHandler, JSNLog" requirePermission="false" />
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="CoffeeTrackerContextConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=CoffeeTracker_DEMO;Integrated Security=True" />
@@ -20,6 +25,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+    <httpHandlers>
+      <add verb="*" path="*.logger" type="JSNLog.LoggerHandler, JSNLog" />
+    </httpHandlers>
   </system.web>
   <system.webServer>
     <handlers>
@@ -27,7 +35,10 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="LoggerHandler" verb="*" path="*.logger" type="JSNLog.LoggerHandler, JSNLog" resourceType="Unspecified" preCondition="integratedMode" />
+      <add name="LoggerHandler-Classic" path="*.logger" verb="*" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" preCondition="classicMode" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -65,4 +76,33 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <jsnlog productionLibraryPath="~/Scripts/jsnlog.min.js">
+  </jsnlog>
+  <nlog throwExceptions="false" internalLogFile="c:\temp\nlog_internal.log" internalLogLevel="Warn" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="file" xsi:type="File" fileName="c:\temp\${shortdate}.log" layout="${date}|${level:uppercase=true}|${logger}|${machinename}|${identity}|${message}|${exception}|${stacktrace}" />
+      <target name="database" xsi:type="Database" keepConnection="true" useTransactions="true" dbProvider="sqlserver" connectionStringName="CoffeeTrackerContextConnectionString" commandText="INSERT INTO [Log] ([Date],[Level],[Logger],[MachineName],[Identity],[Message],[Exception],[Stacktrace]) VALUES (@date, @level, @logger, @machinename, @identity, @message, @exception, @stacktrace)">
+        <parameter name="@date" layout="${date:yyyy-MM-dd HH\:mm\:ss.fff}" />
+        <parameter name="@level" layout="${level:uppercase=true}" />
+        <parameter name="@logger" layout="${logger}" />
+        <parameter name="@machinename" layout="${machinename}" />
+        <parameter name="@identity" layout="${windows-identity}" />
+        <parameter name="@message" layout="${message}" />
+        <parameter name="@exception" layout="${exception:separator=&#xA;:innerExceptionSeparator=&#xA;----&#xA;:maxInnerExceptionLevel=5:format=Message,Type,StackTrace:innerFormat=Message,Type,StackTrace}" />
+        <parameter name="@stacktrace" layout="${stacktrace}" />
+      </target>
+    </targets>
+    <rules>
+      <!--<logger name="*" minlevel="Trace" writeTo="file" />-->
+      <logger name="*" minlevel="Trace" writeTo="database" />
+    </rules>
+  </nlog>
+
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.NLog.NLogLoggerFactoryAdapter, Common.Logging.NLog20">
+        <arg key="configType" value="INLINE" />
+      </factoryAdapter>
+    </logging>
+  </common>
 </configuration>
