--- a/CoffeeTracker/package.json
+++ b/CoffeeTracker/package.json
@@ -75,6 +75,7 @@
       "font-awesome": "npm:font-awesome@^4.5.0",
       "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.5.3",
       "jquery": "npm:jquery@^2.2.2",
+      "jsnlog": "npm:jsnlog@^2.17.1",
       "moment": "npm:moment@^2.12.0",
       "openexchangerates/accounting.js": "github:openexchangerates/accounting.js@^0.4.1",
       "text": "github:systemjs/plugin-text@^0.0.3",
