--- a/CoffeeTracker/packages.config
+++ b/CoffeeTracker/packages.config
@@ -1,19 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net46" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net46" />
+  <package id="Common.Logging.NLog20" version="3.0.0" targetFramework="net46" />
   <package id="DataAnnotationsExtensions" version="5.0.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net46" />
   <package id="EntityFramework.MappingAPI" version="6.0.0.7" targetFramework="net46" />
   <package id="Faker.Net" version="1.0.3" targetFramework="net46" />
+  <package id="JSNLog" version="2.17.1" targetFramework="net46" />
+  <package id="JSNLog.NLog" version="2.17.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.2.1" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="NLog" version="2.0.0.2000" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Swashbuckle" version="5.3.2" targetFramework="net46" />
   <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
