connection string => changed to localdb

--- a/CoffeeTracker/Web.config
+++ b/CoffeeTracker/Web.config
@@ -14,7 +14,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="CoffeeTrackerContextConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=CoffeeTracker_DEMO;Integrated Security=True" />
+    <add name="CoffeeTrackerContextConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=CoffeeTracker_DEMO;Integrated Security=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
