data service on the client side

--- a/CoffeeTracker/CoffeeTracker.csproj
+++ b/CoffeeTracker/CoffeeTracker.csproj
@@ -209,6 +209,7 @@
     <Content Include="src\journal.html" />
     <Content Include="src\journal.js" />
     <Content Include="src\main.js" />
+    <Content Include="src\resources\coffeeDataService.js" />
     <Content Include="src\resources\date-format.js" />
     <Content Include="src\resources\number-format.js" />
     <Content Include="styles\splash.css" />
