--- a/CoffeeTracker/package.json
+++ b/CoffeeTracker/package.json
@@ -85,6 +85,7 @@
     "devDependencies": {
       "babel": "npm:babel-core@^5.6.4",
       "babel-runtime": "npm:babel-runtime@^5.6.4",
+      "clean-css": "npm:clean-css@^3.4.11",
       "core-js": "npm:core-js@^1.2.6"
     },
     "overrides": {
